(ui): changes in js code structuring
